--- a/styles/at.css
+++ b/styles/at.css
@@ -2,11 +2,6 @@ body {
   height: 100%;
   margin: 8px;
 }
-html{
-    height: 100%;
-    margin: auto;
-    overflow: scroll;
-}
 
 .headercontainer {
   display: flex;
@@ -511,17 +506,74 @@ img {
   }
 }
 
-@media only screen and (min-width: 390px) {
+@media only screen
+
+/* Phone 13 mini, iPhone 12 mini, iPhone 11 Pro, iPhone Xs, and iPhone X  */
+and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
   .sticky {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
     flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+  }
+
+  .head {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
     align-items: center;
+    margin-left: 10%;
   }
 
-  @media only screen and (min-width: 390px) {
-
-
-
+  #main {
+    padding: 0;
   }
+
+  .iconcon {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .cv {
+    position: ;
+    right: 3%;
+    top: 2%;
+  }
+
+  .about {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    /* right: 50%; */
+    /* left: 50%; */
+  }
+
+  .aboutcontainer {
+    display: flex;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 75vw;
+    LEFT: 50%;
+    right: 50%;
+    margin-right: -30vw;
+    margin-left: -50vw;
+  }
+
+  h1 {
+    margin-bottom: 0;
+  }
+}
 
   @media only screen
 
@@ -583,7 +635,7 @@ img {
       width: 75vw;
       LEFT: 50%;
       right: 50%;
-      margin-right: -28vw;
+      margin-right: -30vw;
       margin-left: -50vw;
     }
 
@@ -592,7 +644,142 @@ img {
     }
   }
 
-  .anicon {
-    display: flex;
-    justify-content: center;
-  }
+
+
+    @media only screen
+
+    /* iphone XR and iphone 11 */
+    and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
+      .sticky {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+      }
+
+      .head {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        margin-left: 10%;
+      }
+
+      #main {
+        padding: 0;
+      }
+
+      .iconcon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .cv {
+        position: ;
+        right: 3%;
+        top: 2%;
+      }
+
+      .about {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        /* right: 50%; */
+        /* left: 50%; */
+      }
+
+      .aboutcontainer {
+        display: flex;
+        justify-content: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        width: 75vw;
+        LEFT: 50%;
+        right: 50%;
+        margin-right: -30vw;
+        margin-left: -50vw;
+      }
+
+      h1 {
+        margin-bottom: 0;
+      }
+    }
+
+    @media only screen
+
+    /* iphone SE   */
+    and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+      .sticky {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+      }
+
+      .head {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        margin-left: 10%;
+      }
+
+      #main {
+        padding: 0;
+      }
+
+      .iconcon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .cv {
+        position: ;
+        right: 3%;
+        top: 2%;
+      }
+
+      .about {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        /* right: 50%; */
+        /* left: 50%; */
+      }
+
+      .aboutcontainer {
+        display: flex;
+        justify-content: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        width: 75vw;
+        LEFT: 50%;
+        right: 50%;
+        margin-right: -30vw;
+        margin-left: -50vw;
+      }
+
+      h1 {
+        margin-bottom: 0;
+      }
+    }
