--- a/styles/styleswig.css
+++ b/styles/styleswig.css
@@ -506,6 +506,74 @@ img {
   }
 }
 
+@media only screen
+
+/* Phone 13 mini, iPhone 12 mini, iPhone 11 Pro, iPhone Xs, and iPhone X  */
+and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+  .sticky {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+  }
+
+  .head {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-left: 10%;
+  }
+
+  #main {
+    padding: 0;
+  }
+
+  .iconcon {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .cv {
+    position: ;
+    right: 3%;
+    top: 2%;
+  }
+
+  .about {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    /* right: 50%; */
+    /* left: 50%; */
+  }
+
+  .aboutcontainer {
+    display: flex;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 75vw;
+    LEFT: 50%;
+    right: 50%;
+    margin-right: -50vw;
+    margin-left: -30vw;
+  }
+
+  h1 {
+    margin-bottom: 0;
+  }
+}
 
   @media only screen
 
@@ -567,8 +635,8 @@ img {
       width: 75vw;
       LEFT: 50%;
       right: 50%;
-      margin-right: -70vw;
-      margin-left: -50vw;
+      margin-right: -50vw;
+      margin-left: -30vw;
     }
 
     h1 {
@@ -638,8 +706,8 @@ img {
         width: 75vw;
         LEFT: 50%;
         right: 50%;
-        margin-right: -70vw;
-        margin-left: -50vw;
+        margin-right: -50vw;
+        margin-left: -30vw;
       }
 
       h1 {
@@ -707,8 +775,8 @@ img {
         width: 75vw;
         LEFT: 50%;
         right: 50%;
-        margin-right: -70vw;
-        margin-left: -50vw;
+        margin-right: -50vw;
+        margin-left: -30vw;
       }
 
       h1 {
