--- a/styles/talltales.css
+++ b/styles/talltales.css
@@ -1,4 +1,4 @@
- body {
+body {
   height: 100%;
   margin: 8px;
 }
@@ -21,9 +21,8 @@
 .about {
   display: flex;
   font-family: sans-serif;
-  justify-content: flex-start;
-  margin: 0;
-  width: 70%;
+  justify-content: center;
+  width: 500px;
 }
 
 .home {
@@ -45,6 +44,7 @@
   border-width: 1.5px;
   border-style: solid;
   border-color: white;
+  margin: 1%;
 }
 
 .home:hover {
@@ -64,17 +64,9 @@
   font-weight: bolder;
 }
 
-h1 {
+h2 {
+  font-family: sans-serif;
   margin: 0;
-  font-size: 30px;
-  letter-spacing: -5px;
-  width: 20%;
-}
-
-p {
-  font-size: 15px;
-  font-weight: normal;
-  letter-spacing: 0px;
 }
 
 .cover {
@@ -82,22 +74,30 @@ p {
   height: 707px;
 }
 
-
 .cv:hover {
-  border-width: 1.5px;
-  border-style: solid;
-  border-color: white;
-  filter: invert(1);
-  display: flex;
-  color: white;
-  width: 5%;
+  /* margin: 1%; */
+  */: ;
+  font-family: sans-serif;
+  background-color: white;
+  /* top: 0; */
+  /* right: 0; */
+  color: black;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
   font-size: 10px;
   height: 50px;
   border-radius: 20px;
   align-items: center;
+  display: flex;
   font-weight: bolder;
-  right: 0;
-  top: 0;
+  border-width: 1.5px;
+  border-style: solid;
+  border-color: black;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-content: flex-end;
+  filter: invert(1);
 }
 
 .home {
@@ -119,7 +119,6 @@ p {
   border-width: 1.5px;
   border-style: solid;
   border-color: black;
-  margin: 1%;
 }
 
 .home:hover {
@@ -152,64 +151,140 @@ li {
   list-style: none;
 }
 
-.title {
+h1.title {
   font-family: sans-serif;
   display: flex;
   justify-content: center;
   margin: 0;
+  position: -webkit-sticky;
+  position: sticky;
 }
 
 h1 {
-  margin: 0;
-  font-size: 30px;
-  letter-spacing: -1px;
-}
-
-ul {
-  padding: 0;
-  display: flex;
-}
-
-.vp-center {
-  margin-top: 0%;
-}
-
-.vidcontainer {
-  position: initial;
-}
-
-p {
-  font-size: 15px;
-}
-
-img {
-width: 60%;
-height: 60%;
-}
-
-.imgp {
-  display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 1%;
-}
-
-.vp-center {
-    display: flex;
-    align-items: center;
-    background-color: black;
-    justify-content: center;
-}
-
-
-h1 {
-  margin: 0;
   font-size: 30px;
   letter-spacing: -1px;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   margin-right: 1%;
+  font-family: sans-serif;
+}
+
+h2 {
+  display: inline-block;
+  font-family: sans-serif;
+  letter-spacing: -2px;
+}
+
+.poster1 {
+  width: 460px;
+  height: 650px;
+}
+
+.postersword {
+  width: 460px;
+  height: 600px;
+}
+
+.poster2 {
+  width: 460px;
+  height: 650px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.movingsword {
+  height: 505px;
+  width: 460px;
+}
+
+.movingthey {
+  height: 505px;
+  width: 460px;
+}
+
+.movingsept {
+  height: 465px;
+  width: 460px;
+}
+
+.movingqj {
+  height: 600px;
+  width: 460px;
+  margin-top: 1%;
+}
+
+#carousel {
+  width: 100%;
+  /* height: 100%; */
+  background-color: white;
+  overflow: auto;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+
+#carousel .slide {
+  display: inline-block;
+}
+
+p {
+  font-size: 15px;
+  font-weight: normal;
+  letter-spacing: 0px;
+}
+
+.signdiv {
+  align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+}
+
+.sign {
+  width: 20%;
+  height: 20%;
+  margin-bottom: 5%;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+}
+
+.carouselcon {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+}
+
+.imgdiv {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+  text-decoration: underline;
 }
 
 a {
@@ -220,147 +295,230 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
 .bottom {
   display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content: flex-start;
-    flex-direction: row;
-    flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
 
-  }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 1;
+  height: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 100%;
+}
 
-  .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 1;
-    height: 10px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 100%;
+.fa-linkedin {
+  background: #white;
+  color: black;
+}
 
-  }
+.fa-instagram {
+  background: #white;
+  color: black;
+}
 
-  .fa-linkedin {
-    background: #white;
-    color: black;
-  }
+.iconcon {
+  display: flex;
+  justify-content: flex-end;
+  width: 90%;
+}
 
-  .fa-instagram {
-    background: #white;
-    color: black;
-  }
+.cv {
+  /* margin: 1%; */
+  */: ;
+  font-family: sans-serif;
+  background-color: white;
+  /* top: 0; */
+  /* right: 0; */
+  color: black;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
+  height: 50px;
+  border-radius: 20px;
+  align-items: center;
+  display: flex;
+  font-weight: bolder;
+  border-width: 1.5px;
+  border-style: solid;
+  border-color: black;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-content: flex-end;
+}
 
-  .iconcon {
-    display: flex;
-        justify-content: flex-end;
-        width: 100%;
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 0px;
+  margin: 2%;
+  z-index: 1;
+  font-family: sans-serif;
+  margin-left: 1%;
+  font-weight: normal;
+  display: flex;
+  letter-spacing: -10%;
+  margin-bottom: 0;
+  /* margin: 0; */
+  /* align-items: center;*/
+}
 
-  }
+/* The side navigation menu */
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
 
-  .cv {
-    /* margin: 1%; */
-    */: ;
-    font-family: sans-serif;
-    background-color: white;
-    /* top: 0; */
-    /* right: 0; */
-    color: black;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 10px;
-    height: 50px;
-    border-radius: 20px;
-    align-items: center;
-    display: flex;
-    font-weight: bolder;
-    border-width: 1.5px;
-    border-style: solid;
-    border-color: black;
-    justify-content: flex-end;
-    flex-direction: row;
-    align-content: flex-end;
-  }
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
 
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
 
-  div.sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    padding: 0px;
-    margin: 2%;
-    z-index: 1;
-    font-family: sans-serif;
-    margin-left: 1%;
-    font-weight: normal;
-    display: flex;
-    letter-spacing: -10%;
-    /* margin: 0; */
-    align-items: center;
-  }
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
 
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 0 20px;
+}
 
+#main2 {
+  transition: margin-left .5s;
+  padding: 0 20px;
+}
 
-
-
-
-
-  /* The side navigation menu */
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
   .sidenav {
-    height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #111;
-        overflow-x: hidden;
-        padding-top: 60px;
-        transition: 0.5s;}
+    padding-top: 15px;
+  }
 
-  /* The navigation menu links */
   .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
+    font-size: 18px;
   }
+}
 
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: #f1f1f1;
+.head {
+  display: flex;
+  align-content: center;
+  top: 0;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.aboutcontainer {}
+
+.opencon {
+  display: flex;
+  align-content: center;
+  width: 8%;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 1% 0 0;
+  height: 8%;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.image-gallery {
+  /* Mobile first */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 80%;
+}
+
+.image-gallery .column {
+  flex-direction: column;
+  gap: 10px;
+}
+
+.image-item img {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.image-item video {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+img {
+  border-radius: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  .image-gallery {
+    flex-direction: row;
+
   }
+}
 
-  /* Position and style the close button (top right corner) */
-  .sidenav .closebtn {
-    position: absolute;
+@media only screen
+
+/* Phone 13 mini, iPhone 12 mini, iPhone 11 Pro, iPhone Xs, and iPhone X  */
+and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+  .sticky {
+    display: flex;
+    align-content: center;
     top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-
-  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-  #main {
-    transition: margin-left .5s;
-        padding: 0 20px;
-
-  }
-
-  #main2 {
-    transition: margin-left .5s;
-        padding: 0 20px;
-
-  }
-
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;
   }
 
   .head {
@@ -369,28 +527,259 @@ a:hover {
     top: 0;
     width: 100%;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-left: 10%;
+  }
 
+  #main {
+    padding: 0;
+  }
+
+  .iconcon {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .cv {
+    position: ;
+    right: 3%;
+    top: 2%;
+  }
+
+  .about {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    /* right: 50%; */
+    /* left: 50%; */
   }
 
   .aboutcontainer {
-  }
-
-  .opencon {
     display: flex;
-    align-content: center;
-    width: 8%;
-    flex-direction: column;
     justify-content: center;
-    padding: 0 1% 0 0;
-    height: 8%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 75vw;
+    LEFT: 50%;
+    right: 50%;
+    margin-right: -50vw;
+    margin-left: -50vw;
+  }
+
+  h1 {
+    margin-bottom: 0;
+  }
+}
+
+  @media only screen
+
+  /* iphone 13 */
+  and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+    .sticky {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: flex-start;
+    }
+
+    .head {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-left: 10%;
+    }
+
+    #main {
+      padding: 0;
+    }
+
+    .iconcon {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .cv {
+      position: ;
+      right: 3%;
+      top: 2%;
+    }
+
+    .about {
+      width: 100%;
+      text-align: center;
+      position: relative;
+      /* right: 50%; */
+      /* left: 50%; */
+    }
+
+    .aboutcontainer {
+      display: flex;
+      justify-content: center;
+      display: flex;
+      justify-content: center;
+      position: relative;
+      width: 75vw;
+      LEFT: 50%;
+      right: 50%;
+      margin-right: -45vw;
+      margin-left: -50vw;
+    }
+
+    h1 {
+      margin-bottom: 0;
+    }
   }
 
 
-  .material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48 }
+
+    @media only screen
+
+    /* iphone XR and iphone 11 */
+    and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
+      .sticky {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+      }
+
+      .head {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        margin-left: 10%;
+      }
+
+      #main {
+        padding: 0;
+      }
+
+      .iconcon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .cv {
+        position: ;
+        right: 3%;
+        top: 2%;
+      }
+
+      .about {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        /* right: 50%; */
+        /* left: 50%; */
+      }
+
+      .aboutcontainer {
+        display: flex;
+        justify-content: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        width: 75vw;
+        LEFT: 50%;
+        right: 50%;
+        margin-right: -45vw;
+        margin-left: -50vw;
+      }
+
+      h1 {
+        margin-bottom: 0;
+      }
+    }
+
+    @media only screen
+
+    /* iphone SE   */
+    and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+      .sticky {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+      }
+
+      .head {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        margin-left: 10%;
+      }
+
+      #main {
+        padding: 0;
+      }
+
+      .iconcon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .cv {
+        position: ;
+        right: 3%;
+        top: 2%;
+      }
+
+      .about {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        /* right: 50%; */
+        /* left: 50%; */
+      }
+
+      .aboutcontainer {
+        display: flex;
+        justify-content: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        width: 75vw;
+        LEFT: 50%;
+        right: 50%;
+        margin-right: -40vw;
+        margin-left: -50vw;
+      }
+
+      h1 {
+        margin-bottom: 0;
+      }
+    }
