--- a/styles/at.css
+++ b/styles/at.css
@@ -1,6 +1,7 @@
 body {
   height: 100%;
   margin: 8px;
+  color: #1E23EA;
 }
 
 .headercontainer {
@@ -78,7 +79,7 @@ h2 {
   /* margin: 1%; */
   */: ;
   font-family: sans-serif;
-  background-color: white;
+  background-color: blue;
   /* top: 0; */
   /* right: 0; */
   color: black;
@@ -93,11 +94,10 @@ h2 {
   font-weight: bolder;
   border-width: 1.5px;
   border-style: solid;
-  border-color: black;
+  border-color: blue;
   justify-content: flex-end;
   flex-direction: row;
   align-content: flex-end;
-  filter: invert(1);
 }
 
 .home {
@@ -308,22 +308,22 @@ a:hover {
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 1;
   height: 10px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
   border-radius: 100%;
+
 }
 
 .fa-linkedin {
   background: #white;
-  color: black;
+  color: blue;
 }
 
 .fa-instagram {
   background: #white;
-  color: black;
+  color: blue;
 }
 
 .iconcon {
@@ -333,28 +333,27 @@ a:hover {
 }
 
 .cv {
-  /* margin: 1%; */
-  */: ;
-  font-family: sans-serif;
-  background-color: white;
-  /* top: 0; */
-  /* right: 0; */
-  color: black;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 10px;
-  height: 50px;
-  border-radius: 20px;
-  align-items: center;
-  display: flex;
-  font-weight: bolder;
-  border-width: 1.5px;
-  border-style: solid;
-  border-color: black;
-  justify-content: flex-end;
-  flex-direction: row;
-  align-content: flex-end;
+  margin: 1%; */
+      font-family: sans-serif;
+      background-color: white;
+      /* top: 0; */
+      /* right: 0; */
+      color: blue;
+      width: 50px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 10px;
+      height: 50px;
+      border-radius: 20px;
+      align-items: center;
+      display: flex;
+      font-weight: bolder;
+      border-width: 1.5px;
+      border-style: solid;
+      border-color: blue;
+      justify-content: flex-end;
+      flex-direction: row;
+      align-content: flex-end;
 }
 
 div.sticky {
@@ -382,10 +381,11 @@ div.sticky {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #1E23EA;
   overflow-x: hidden;
   padding-top: 60px;
   transition: 0.5s;
+  color: #1E23EA;
 }
 
 /* The navigation menu links */
@@ -393,7 +393,7 @@ div.sticky {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: white;
   display: block;
   transition: 0.3s;
 }
@@ -502,7 +502,6 @@ img {
 @media only screen and (min-width: 768px) {
   .image-gallery {
     flex-direction: row;
-
   }
 }
 
@@ -575,216 +574,213 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
   }
 }
 
-  @media only screen
+@media only screen
 
-  /* iphone 13 */
-  and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
-    .sticky {
-      display: flex;
-      align-content: center;
-      top: 0;
-      width: 100%;
-      flex-direction: row;
-      justify-content: center;
-      flex-wrap: nowrap;
-      align-items: flex-start;
-    }
-
-    .head {
-      display: flex;
-      align-content: center;
-      top: 0;
-      width: 100%;
-      flex-direction: column;
-      justify-content: center;
-      flex-wrap: nowrap;
-      align-items: center;
-      margin-left: 10%;
-    }
-
-    #main {
-      padding: 0;
-    }
-
-    .iconcon {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-    }
-
-    .cv {
-      position: ;
-      right: 3%;
-      top: 2%;
-    }
-
-    .about {
-      width: 100%;
-      text-align: center;
-      position: relative;
-      /* right: 50%; */
-      /* left: 50%; */
-    }
-
-    .aboutcontainer {
-      display: flex;
-      justify-content: center;
-      display: flex;
-      justify-content: center;
-      position: relative;
-      width: 75vw;
-      LEFT: 50%;
-      right: 50%;
-      margin-right: -30vw;
-      margin-left: -50vw;
-    }
-
-    h1 {
-      margin-bottom: 0;
-    }
+/* iphone 13 */
+and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+  .sticky {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;
   }
 
+  .head {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-left: 10%;
+  }
 
+  #main {
+    padding: 0;
+  }
 
-    @media only screen
+  .iconcon {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 
-    /* iphone XR and iphone 11 */
-    and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
-      .sticky {
-        display: flex;
-        align-content: center;
-        top: 0;
-        width: 100%;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: nowrap;
-        align-items: flex-start;
-      }
+  .cv {
+    position: ;
+    right: 3%;
+    top: 2%;
+  }
 
-      .head {
-        display: flex;
-        align-content: center;
-        top: 0;
-        width: 100%;
-        flex-direction: column;
-        justify-content: center;
-        flex-wrap: nowrap;
-        align-items: center;
-        margin-left: 10%;
-      }
+  .about {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    /* right: 50%; */
+    /* left: 50%; */
+  }
 
-      #main {
-        padding: 0;
-      }
+  .aboutcontainer {
+    display: flex;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 75vw;
+    LEFT: 50%;
+    right: 50%;
+    margin-right: -30vw;
+    margin-left: -50vw;
+  }
 
-      .iconcon {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-      }
+  h1 {
+    margin-bottom: 0;
+  }
+}
 
-      .cv {
-        position: ;
-        right: 3%;
-        top: 2%;
-      }
+@media only screen
 
-      .about {
-        width: 100%;
-        text-align: center;
-        position: relative;
-        /* right: 50%; */
-        /* left: 50%; */
-      }
+/* iphone XR and iphone 11 */
+and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
+  .sticky {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+  }
 
-      .aboutcontainer {
-        display: flex;
-        justify-content: center;
-        display: flex;
-        justify-content: center;
-        position: relative;
-        width: 75vw;
-        LEFT: 50%;
-        right: 50%;
-        margin-right: -30vw;
-        margin-left: -50vw;
-      }
+  .head {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-left: 10%;
+  }
 
-      h1 {
-        margin-bottom: 0;
-      }
-    }
+  #main {
+    padding: 0;
+  }
 
-    @media only screen
+  .iconcon {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 
-    /* iphone SE   */
-    and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
-      .sticky {
-        display: flex;
-        align-content: center;
-        top: 0;
-        width: 100%;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: nowrap;
-        align-items: flex-start;
-      }
+  .cv {
+    position: ;
+    right: 3%;
+    top: 2%;
+  }
 
-      .head {
-        display: flex;
-        align-content: center;
-        top: 0;
-        width: 100%;
-        flex-direction: column;
-        justify-content: center;
-        flex-wrap: nowrap;
-        align-items: center;
-        margin-left: 10%;
-      }
+  .about {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    /* right: 50%; */
+    /* left: 50%; */
+  }
 
-      #main {
-        padding: 0;
-      }
+  .aboutcontainer {
+    display: flex;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 75vw;
+    LEFT: 50%;
+    right: 50%;
+    margin-right: -30vw;
+    margin-left: -50vw;
+  }
 
-      .iconcon {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-      }
+  h1 {
+    margin-bottom: 0;
+  }
+}
 
-      .cv {
-        position: ;
-        right: 3%;
-        top: 2%;
-      }
+@media only screen
 
-      .about {
-        width: 100%;
-        text-align: center;
-        position: relative;
-        /* right: 50%; */
-        /* left: 50%; */
-      }
+/* iphone SE   */
+and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+  .sticky {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+  }
 
-      .aboutcontainer {
-        display: flex;
-        justify-content: center;
-        display: flex;
-        justify-content: center;
-        position: relative;
-        width: 75vw;
-        LEFT: 50%;
-        right: 50%;
-        margin-right: -30vw;
-        margin-left: -50vw;
-      }
+  .head {
+    display: flex;
+    align-content: center;
+    top: 0;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-left: 10%;
+  }
 
-      h1 {
-        margin-bottom: 0;
-      }
-    }
+  #main {
+    padding: 0;
+  }
 
-    .anicon {
-      display: flex;
-      justify-content: center;
-    }
+  .iconcon {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .cv {
+    position: ;
+    right: 3%;
+    top: 2%;
+  }
+
+  .about {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    /* right: 50%; */
+    /* left: 50%; */
+  }
+
+  .aboutcontainer {
+    display: flex;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 75vw;
+    LEFT: 50%;
+    right: 50%;
+    margin-right: -30vw;
+    margin-left: -50vw;
+  }
+
+  h1 {
+    margin-bottom: 0;
+  }
+
+  .anicon {
+    display: flex;
+    justify-content: flex-end;
+  }
