--- a/styles/stylesconq.css
+++ b/styles/stylesconq.css
@@ -10,6 +10,25 @@ p {
 
 }
 
+@font-face {
+  font-family: 'ClashDisplay-Regular';
+  src: url('font2/fonts/ClashDisplay-Regular.woff2') format('woff2'),
+       url('font2/fonts/ClashDisplay-Regular.woff') format('woff'),
+       url('font2/fonts/ClashDisplay-Regular.ttf') format('truetype');
+       font-weight: 400;
+       font-display: swap;
+       font-style: normal;
+}
+@font-face {
+  font-family: 'ClashDisplay-Semibold';
+  src: url('font2/fonts/ClashDisplay-Semibold.woff2') format('woff2'),
+       url('font2/fonts/ClashDisplay-Semibold.woff') format('woff'),
+       url('font2/fonts/ClashDisplay-Semibold.ttf') format('truetype');
+       font-weight: 600;
+       font-display: swap;
+       font-style: normal;
+}
+
 .headercontainer {
   display: flex;
   justify-content: center;
@@ -27,7 +46,7 @@ p {
 
 .about {
   display: flex;
-  font-family: sans-serif;
+  font-family: 'ClashDisplay-regular';
   justify-content: center;
   width: 500px;
 }
@@ -174,6 +193,8 @@ h1 {
   top: 0;
   margin-right: 1%;
   font-family: sans-serif;
+  font-family: 'ClashDisplay-semibold';
+
 }
 
 h2 {
@@ -243,6 +264,8 @@ p {
   font-size: 15px;
   font-weight: normal;
   letter-spacing: 0px;
+  font-family: 'ClashDisplay-regular';
+
 }
 
 .signdiv {
@@ -378,6 +401,7 @@ div.sticky {
   margin-bottom: 0;
   /* margin: 0; */
   /* align-items: center;*/
+  background-color: white;
 }
 
 /* The side navigation menu */
@@ -562,6 +586,8 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
     position: relative;
     /* right: 50%; */
     /* left: 50%; */
+    font-family: 'ClashDisplay-regular';
+
   }
 
   .aboutcontainer {
@@ -631,6 +657,8 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
       position: relative;
       /* right: 50%; */
       /* left: 50%; */
+      font-family: 'ClashDisplay-regular';
+
     }
 
     .aboutcontainer {
@@ -702,6 +730,8 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
         position: relative;
         /* right: 50%; */
         /* left: 50%; */
+        font-family: 'ClashDisplay-semibold';
+
       }
 
       .aboutcontainer {
@@ -771,6 +801,8 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
         position: relative;
         /* right: 50%; */
         /* left: 50%; */
+        font-family: 'ClashDisplay-regular';
+
       }
 
       .aboutcontainer {
