--- a/styles/stylesfuze.css
+++ b/styles/stylesfuze.css
@@ -30,6 +30,8 @@ p {
   font-family: sans-serif;
   justify-content: center;
   width: 500px;
+  font-family: 'ClashDisplay-Regular';
+
 }
 
 .home {
@@ -165,6 +167,24 @@ h1.title {
   position: -webkit-sticky;
   position: sticky;
 }
+@font-face {
+  font-family: 'ClashDisplay-Regular';
+  src: url('font2/fonts/ClashDisplay-Regular.woff2') format('woff2'),
+       url('font2/fonts/ClashDisplay-Regular.woff') format('woff'),
+       url('font2/fonts/ClashDisplay-Regular.ttf') format('truetype');
+       font-weight: 400;
+       font-display: swap;
+       font-style: normal;
+}
+@font-face {
+  font-family: 'ClashDisplay-Semibold';
+  src: url('font2/fonts/ClashDisplay-Semibold.woff2') format('woff2'),
+       url('font2/fonts/ClashDisplay-Semibold.woff') format('woff'),
+       url('font2/fonts/ClashDisplay-Semibold.ttf') format('truetype');
+       font-weight: 600;
+       font-display: swap;
+       font-style: normal;
+}
 
 h1 {
   font-size: 30px;
@@ -173,7 +193,8 @@ h1 {
   position: sticky;
   top: 0;
   margin-right: 1%;
-  font-family: sans-serif;
+  font-family: 'ClashDisplay-semibold';
+
 }
 
 h2 {
@@ -243,6 +264,8 @@ p {
   font-size: 15px;
   font-weight: normal;
   letter-spacing: 0px;
+  font-family: 'ClashDisplay-Regular';
+
 }
 
 .signdiv {
@@ -380,6 +403,7 @@ div.sticky {
   margin-bottom: 0;
   /* margin: 0; */
   /* align-items: center;*/
+  background-color: black;
 }
 
 /* The side navigation menu */
